10_DevOps/__Ref__/Docker-K8s/K8s/41-full-stack/manifests/07-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: myapp-dev
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: myapp-dev
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
